Refactored to fix loading message not showing up and used axios params

--- a/src/App.css
+++ b/src/App.css
@@ -259,41 +259,41 @@ nav li:last-child p {
   .articles-list {
     grid-template-columns: auto;
   }
-  .articles-list > div:nth-of-type(1) {
+  .articles-list > a:nth-of-type(1)  {
     display: grid;
     grid-template: auto / auto 30%;
   }
 
-  .articles-list > div:nth-of-type(1) img {
+  .articles-list > a:nth-of-type(1) figure {
     grid-area: 1 / 2 / 2 / 3;
   }
 
-  .articles-list > div:nth-of-type(1) .article-main {
+  .articles-list > a:nth-of-type(1) .article-main {
     grid-area: 1 / 1 / 2 / 2;
     padding-right: 1rem;
   }
 
-  .articles-list > div:nth-of-type(1) .article-header {
+  .articles-list > a:nth-of-type(1) .article-header {
     display: block;
   }
 
-  .articles-list > div:nth-of-type(1) .article-header p {
+  .articles-list > a:nth-of-type(1) .article-header p {
     text-align: left;
   }
 
-  .articles-list > div:nth-of-type(1) h3 {
+  .articles-list > a:nth-of-type(1) h3 {
     margin-right: 1rem;
   }
 
-  .articles-list > div:nth-of-type(1) .details {
+  .articles-list > a:nth-of-type(1) .details {
     justify-content: end;
   }
 
-  .articles-list > div:nth-of-type(1) .details * {
+  .articles-list > a:nth-of-type(1) .details * {
     text-align: right;
   }
 
-  .articles-list > div:nth-of-type(1) .article-footer * {
+  .articles-list > a:nth-of-type(1) .article-footer * {
     margin: 0 0 0 1rem;
   }
 }
@@ -305,11 +305,11 @@ nav li:last-child p {
 }
 
 @media screen and (max-width: 500px) {
-  .articles-list > div:nth-of-type(1) {
+  .articles-list > a:nth-of-type(1) {
     display: block;
   }
 
-  .articles-list > div:nth-of-type(1) h3 {
+  .articles-list > a:nth-of-type(1) h3 {
     margin: 0;
   }
 
@@ -321,7 +321,7 @@ nav li:last-child p {
     margin: 0;
   }
 
-  .article-card img {
+  .article-card figure {
     display: none;
   }
 }
